ingress-functionappcontagem.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: functionappcontagem
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:  
    - http:
        paths:
        - path: /contagem(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: functionappcontagem-http
              port:
                number: 80
